force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c.object
<CustomObject>
    <fields>
        <fullName>GW_Volunteers__Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Volunteer Jobs</relationshipLabel>
        <relationshipName>Volunteer_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Display_on_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if this Volunteer Job should be included in the Available Volunteer Jobs Sites page.</inlineHelpText>
        <label>Display on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__External_Signup_Url__c</fullName>
        <description>If provided, the VolunteersJobListingFS page will redirect to this website when the user clicks on the Sign Up link on the page.  This allows you to advertise jobs that one must register for on another web site.</description>
        <inlineHelpText>If provided, the VolunteersJobListingFS page will redirect to this website when the user clicks on the Sign Up link on the page.  This allows you to advertise jobs that one must register for on another web site.</inlineHelpText>
        <label>External Signup Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__First_Shift__c</fullName>
        <label>First Shift</label>
        <summarizedField>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Start_Date_Time__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Volunteer Job is no longer active, and it won&apos;t be included in the Volunteers Report Hours Sites page.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Location_City__c</fullName>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Location_Information__c</fullName>
        <inlineHelpText>Put in any additional details, like driving directions or a URL to a map, in this field, and it will be included in automated email reminders.</inlineHelpText>
        <label>Location Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Location_Street__c</fullName>
        <label>Location Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Location_Zip_Postal_Code__c</fullName>
        <label>Location Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Location__c</fullName>
        <label>Location State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Completed_Hours__c</fullName>
        <inlineHelpText>Total number of Hours that are Completed.  Hours with other status values are not included.</inlineHelpText>
        <label>Number of Completed Hours</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Total_Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Shifts__c</fullName>
        <label>Number of Shifts</label>
        <summaryForeignKey>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</fullName>
        <label># of Volunteers Still Needed</label>
        <summarizedField>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Number_of_Volunteers_Still_Needed__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Volunteers__c</fullName>
        <inlineHelpText>The total number of volunteers whose Hours Status = Completed or Confirmed.</inlineHelpText>
        <label>Number of Volunteers</label>
        <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Number_of_Volunteers__c</summarizedField>
        <summaryFilterItems>
            <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
            <operation>equals</operation>
            <value>Confirmed, Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Ongoing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ongoing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Skills_Needed__c</fullName>
        <inlineHelpText>the skills the volunteer should have to do this job</inlineHelpText>
        <label>Skills Needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Computer usage</fullName>
                </value>
                <value>
                    <fullName>Manual Labor</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Event Planning</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
                <value>
                    <fullName>basic accounting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Website_Time_Zone__c</fullName>
        <inlineHelpText>The Time Zone to use when displaying Shift times on Sites pages.   You only need to set this if you want to override both the Time Zone set on the Site Guest User profile, and the Time Zone set on the Volunteers campaign.</inlineHelpText>
        <label>Volunteer Website Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimat</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Saigon</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dacca</fullName>
                </value>
                <value>
                    <fullName>Asia/Yekaterinburg</fullName>
                </value>
                <value>
                    <fullName>Asia/Katmandu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Volunteer Job</label>
    <listViews>
        <fullName>GW_Volunteers__All_Jobs</fullName>
        <columns>NAME</columns>
        <columns>GW_Volunteers__Campaign__c</columns>
        <columns>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</columns>
        <columns>GW_Volunteers__Number_of_Completed_Hours__c</columns>
        <columns>GW_Volunteers__Ongoing__c</columns>
        <columns>GW_Volunteers__Display_on_Website__c</columns>
        <columns>GW_Volunteers__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Jobs</label>
    </listViews>
    <listViews>
        <fullName>GW_Volunteers__Available_Jobs</fullName>
        <columns>NAME</columns>
        <columns>GW_Volunteers__Campaign__c</columns>
        <columns>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</columns>
        <columns>GW_Volunteers__Number_of_Completed_Hours__c</columns>
        <columns>GW_Volunteers__Ongoing__c</columns>
        <columns>GW_Volunteers__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GW_Volunteers__Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Available Jobs</label>
    </listViews>
    <listViews>
        <fullName>GW_Volunteers__Ongoing_Jobs</fullName>
        <columns>NAME</columns>
        <columns>GW_Volunteers__Campaign__c</columns>
        <columns>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</columns>
        <columns>GW_Volunteers__Number_of_Completed_Hours__c</columns>
        <columns>GW_Volunteers__Ongoing__c</columns>
        <columns>GW_Volunteers__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GW_Volunteers__Ongoing__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>GW_Volunteers__Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Ongoing Jobs</label>
    </listViews>
    <nameField>
        <label>Volunteer Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>GW_Volunteers__ValidateExternalSignupUrl</fullName>
        <active>true</active>
        <description>Validates that the External Signup URL field begins with an expected URI Scheme.</description>
        <errorConditionFormula>NOT(OR(ISBLANK(GW_Volunteers__External_Signup_Url__c), REGEX(GW_Volunteers__External_Signup_Url__c,&quot;^(http|https|mailto).*&quot;)))</errorConditionFormula>
        <errorDisplayField>GW_Volunteers__External_Signup_Url__c</errorDisplayField>
        <errorMessage>The External Signup Url value must begin with http, https, or mailto.</errorMessage>
    </validationRules>
</CustomObject>